Rama creada y botones creados HTml practica 8

--- a/interaccionHTML.html
+++ b/interaccionHTML.html
@@ -17,7 +17,7 @@
         </button>
         
         <button type="button" id="anyadirgasto">
-            Añadir gasto
+            Añadir gastos
         </button>
         
         <button type="button" id="anyadirgasto-formulario">
